--- a/trunk/App Utils/Components2.0/src/org/components/parent/controls/PxTable.form
+++ b/trunk/App Utils/Components2.0/src/org/components/parent/controls/PxTable.form
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.1" encoding="UTF-8" ?>
 
 <Form version="1.5" maxVersion="1.7">
   <Properties>
@@ -8,6 +8,7 @@
     <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
       <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
     </Property>
+    <Property name="terminateEditOnFocusLost" type="boolean" value="false"/>
   </Properties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
